--- a/index.html
+++ b/index.html
@@ -14,36 +14,40 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-      <nav class="navbar justify-content-between navbar-expand-lg bg-light">
-            <div  class="container-fluid d-flex justify-content-between">
-              <a class="navbar-brand" href="./index.html"><img data-aos="flip-right" data-aos-duration="800" src="./assets/img/logo lulipets 60x60.png" alt=""></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/Blog.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/Afiliados.html">Afiliados</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/Nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/Contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/Mi cuenta.html">Mi Cuenta</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
+    <nav>
+      <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+          <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="toggler-icon top-bar"></span>
+            <span class="toggler-icon middle-bar"></span>
+            <span class="toggler-icon bottom-bar"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto d-flex align-items-center">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/Blog.html">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/Afiliados.html">Afiliados</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/Nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/Contacto.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/Mi cuenta.html">Mi cuenta</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </nav>
     <header>
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -55,21 +59,21 @@
               <div class="carousel-item active" data-bs-interval="10000">
                 <img src="./assets/img/carrusel/foto 1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h3>¡Somos Lulipets!</h3>
+                  <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="./assets/img/carrusel/foto 2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h3>¡Somos Lulipets!</h3>
+                  <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./assets/img/carrusel/foto 3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h3>¡Somos Lulipets!</h3>
+                  <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
               </div>
