--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -14,43 +14,45 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <nav>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img  data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="../pages/Blog.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Afiliados.html">Afiliados</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Mi cuenta.html">Mi Cuenta</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+  <nav>
+    <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto d-flex align-items-center">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./Blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Afiliados.html">Afiliados</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Mi cuenta.html">Mi cuenta</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
+  </nav>
   <div class="div container-fluid">
     <header class="FondoBlog row d-flex flex-column justify-content-around  align-items-center">
       <div class="Cabezal d-flex flex-column align-items-center col-11 col-lg-8 col-xl-6">
-        <h2 class="text-center">¡Te presentamos nuestra comunidad de Lulipets!</h2>
-        <p class="text-center">Aqui podras ver todos la información sobre tu mascota. Desde nuestra aplicación podrás agregar información a nuestro blog</p>
+        <h1 class="tituloBlog text-center">¡Te presentamos nuestra comunidad de Lulipets!</h1>
+        <p class="subtituloBlog text-center">Aqui podras ver todos la información sobre tu mascota. Desde nuestra aplicación podrás agregar información a nuestro blog</p>
       </div>
       <div class="circulo d-flex justify-content-center align-items-center col-12 col-lg-10">
         <button class="Boton1"><img src="../assets/img/Blog/perroblog.png" alt=""></button>
@@ -72,48 +74,48 @@
         <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/perros sudan.jpg" class="img card-img-top" alt="...">
           <div class="card-body">
-            <h6 class="card-subtitle mb-2 text-muted">Curiosidades</h6>
-            <h5 class="card-title">La sudoración de los perros: ¿Los perros sudan?</h5>
+            <h6 class="subtitulo mb-2">Curiosidades</h6>
+            <h5 class="titulo">La sudoración de los perros: ¿Los perros sudan?</h5>
             <p class="card-text">Corremos, saltamos, subimos y bajamos, y nuestra mascota nos sigue sin dudarlo. Nosotros, a consecuencia del calor y el esfuerzo, sudamos, ¡y mucho!...</p>
           </div>
         </div>
         <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/perro adoptado.jpg" class="img card-img-top" alt="...">
           <div class="card-body">
-            <h6 class="card-subtitle mb-2 text-muted">Consejos</h6>
-            <h5 class="card-title">Prepara la llegada de un perro adoptado al hogar</h5>
+            <h6 class="subtitulo mb-2">Consejos</h6>
+            <h5 class="titulo">Prepara la llegada de un perro adoptado al hogar</h5>
             <p class="card-text">La llegada de un perro adoptado al hogar es un acontecimiento único en la vida de muchas familias. Y es importante saber que esta nueva etapa, va...</p>
           </div>
         </div>
         <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/perros pulgas.jpg" class="img card-img-top" alt="...">
           <div class="card-body">
-            <h6 class="card-subtitle mb-2 text-muted">Salud</h6>
-            <h5 class="card-title">Cómo eliminar y prevenir las garrapatas</h5>
+            <h6 class="subtitulo mb-2">Salud</h6>
+            <h5 class="titulo">Cómo eliminar y prevenir las garrapatas</h5>
             <p class="card-text">¿Qué son? Las garrapatas son ácaros, considerados parásitos externos que se alimentan de la sangre de animales, como nuestras mascotas...</p>
           </div>
         </div>
         <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/ACCESORIOS PERROS (2).jpg" class="img card-img-top" alt="...">
           <div class="card-body">
-            <h6 class="card-subtitle mb-2 text-muted">Accesorios</h6>
-            <h5 class="card-title">10 productos imprescindibles para tu perro</h5>
+            <h6 class="subtitulo mb-2">Accesorios</h6>
+            <h5 class="titulo">10 productos imprescindibles para tu perro</h5>
             <p class="card-text">Muchos son los artículos que nos entran por los ojos cuando visitamos las tiendas de productos para animales, lo que dificulta que...</p>
           </div>
         </div>
         <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/perro paseando.jpg" class="img card-img-top" alt="...">
           <div class="card-body">
-            <h6 class="card-subtitle mb-2 text-muted">Comportamiento</h6>
-            <h5 class="card-title">Pasear con la correa suelta: por qué es mejor y cómo enseñarlo</h5>
+            <h6 class="subtitulo mb-2">Comportamiento</h6>
+            <h5 class="titulo">Pasear con la correa suelta: por qué es mejor y cómo enseñarlo</h5>
             <p class="card-text">Es esencial para todos los perros hacer ejercicio y tomar aire fresco cada día. Los paseos diarios pueden ayudar a mantener un peso...</p>
           </div>
         </div>
         <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/abeja-en-el-hocico-de-un-perro (1).jpg" class="img card-img-top" alt="...">
           <div class="card-body">
-            <h6 class="card-subtitle mb-2 text-muted">Salud</h6>
-            <h5 class="card-title">Picaduras de abejas y avispas</h5>
+            <h6 class="subtitulo mb-2">Salud</h6>
+            <h5 class="titulo">Picaduras de abejas y avispas</h5>
             <p class="card-text">Todos los perros son curiosos y les encanta correr y perseguir cosas… insectos incluidos! En la mayoría de los casos, las picaduras de abejas...</p>
           </div>
         </div>
