--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -14,44 +14,46 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <nav>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img  data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Blog.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Afiliados.html">Afiliados</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link  active" href="../pages/Contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Mi cuenta.html">Mi Cuenta</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+  <nav>
+    <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto d-flex align-items-center">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Afiliados.html">Afiliados</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./Contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Mi cuenta.html">Mi cuenta</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
+  </nav>
   <div class="FondoContacto container-fluid">
     <header class="header row d-flex flex-column justify-content-around  align-items-center">
       <div class="d-flex flex-column justify-content-center align-items-center col-11 col-lg-8 col-xl-6">
         <br>
-        <h2 class="text-center">¿Nesecitas ayuda?</h2>
-        <p class="text-center">¡Queremos escucharte! Aquí podras mandar tus preguntas, ideas y sugerencias.</p>
+        <h1 class="tituloContacto text-center">¿Nesecitas ayuda?</h1>
+        <p class="parrafoContacto mt-3 text-center">¡Queremos escucharte! Aquí podras mandar tus preguntas, ideas y sugerencias.</p>
       </div>
     </header>
     <main>
@@ -72,7 +74,7 @@
           <label for="exampleFormControlComentario" class="form-label">Comentario</label>
           <textarea class="form-control" id="exampleFormControlComentario" rows="3"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary m-3 col-3 col-sm-3 col-lg-3 col-xl-2 d-flex justify-content-center"><img src="../assets/img/mi cuenta.png" alt=""> Enviar</button>
+        <button type="submit" class="btn m-3 col-3 col-sm-3 col-lg-3 col-xl-2 d-flex justify-content-center" style="background-color: #081920;"><img class="imagen" src="../assets/img/mi cuenta.png" alt=""> Enviar</button>
       </form>
     </main>
     <aside>
