--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -12,48 +12,49 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <nav>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img  data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Blog.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Afiliados.html">Afiliados</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="../pages/Nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Mi cuenta.html">Mi Cuenta</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </nav>
-  <div class="div container-fluid">
-    <header>
-    </header>
-    <main class="Nosotros row d-flex justify-content-center">
-        <div class=" d-flex flex-column align-items-center">
-          <img class="my-2" src="../assets/img/Nosotros/logo lulipets 2grande.png" alt="">
-          <h1 class="my-3">¿Cómo nacimos?</h1>
-          <br>
-          <p class= "col-10 col-xl-9">“Luli”, nuestra mascota, falleció de cáncer. Fueron meses de tratamientos, turnos con el veterinario, remedios y esperas para tratar una enfermedad que avanzaba implacablemente... En el proceso vimos como la energía de ella se apagaba poco a poco y como las tardanzas de un sistema que no funciona alargaban aun mas la agonía. Es por eso que creamos Lulipets, una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas. Nuestro objetivo es que ninguna mascota pase por lo mismo que Luli, y ayudar a sus dueños a encontrar el lugar ideal para poder atenderlos. Con su ayuda podemos mejorar la infraestructura de nuestra aplicación, y lograr que muchas mascotas tengan la atención y el cuidado que se merecen.</p>
+  <nav>
+    <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto d-flex align-items-center">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Afiliados.html">Afiliados</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./Nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Mi cuenta.html">Mi cuenta</a>
+            </li>
+          </ul>
         </div>
+      </div>
+    </nav>
+  </nav>
+  <div class="div Nosotros container-fluid">
+    <header>
+      <div class="d-flex flex-column align-items-center">
+        <img class="my-5" src="../assets/img/Nosotros/logo lulipets 2grande.png" alt="">
+        <h1 class="tituloNosotros my-3">¿Cómo nacimos?</h1>
+        <p class= "parrafoNosotros col-10 col-xl-9 mt-3">“Luli”, nuestra mascota, falleció de cáncer. Fueron meses de tratamientos, turnos con el veterinario, remedios y esperas para tratar una enfermedad que avanzaba implacablemente... En el proceso vimos como la energía de ella se apagaba poco a poco y como las tardanzas de un sistema que no funciona alargaban aun mas la agonía. Es por eso que creamos Lulipets, una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas. Nuestro objetivo es que ninguna mascota pase por lo mismo que Luli, y ayudar a sus dueños a encontrar el lugar ideal para poder atenderlos. Con su ayuda podemos mejorar la infraestructura de nuestra aplicación, y lograr que muchas mascotas tengan la atención y el cuidado que se merecen.</p>
+      </div>
+    </header>
+    <main class=" row d-flex justify-content-center mt-5">
           <div class="cardsNosotros my-2 row d-flex flex-wrap justify-content-center">
               <div data-aos="zoom-in-up"  class="cardNosotros m-3">
                 <h5 class="card-title m-3">Problema</h5>
