--- a/pages/Afiliados.html
+++ b/pages/Afiliados.html
@@ -14,43 +14,45 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <nav>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img  data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Blog.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="../pages/Afiliados.html">Afiliados</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Mi cuenta.html">Mi Cuenta</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+  <nav>
+    <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto d-flex align-items-center">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./Afiliados.html">Afiliados</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Mi cuenta.html">Mi cuenta</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
+  </nav>
   <div class="div container-fluid">
     <header class="HeaderAfiliados row d-flex flex-column align-items-center justify-content-around ">
-      <div class="d-flex flex-column align-items-center justify-content-center my-1 col-10 col-lg-6 ">
-        <h1>Afiliados de Lulipets</h1>
-        <p>Aquí podras ver las veterinarias que nos eligieron y nos siguen eligiendo día a día.¡Podes ser parte de nosotros, sumate!</p>
+      <div class="d-flex flex-column align-items-center justify-content-center mt-5 col-10 col-lg-8 ">
+        <h1 class="tituloAfiliados text-center">Afiliados de Lulipets</h1>
+        <p class="subtituloAfiliados text-center">Aquí podras ver las veterinarias que nos eligieron y nos siguen eligiendo día a día.¡Podes ser parte de nosotros, sumate!</p>
       </div>
       <div class="buscador d-flex justify-content-between align-items-center my-5 col-8 col-lg-6 col-xl-5 ">
         <input type="text" class="buscarTexto" placeholder="Buscar...">
@@ -69,7 +71,7 @@
     </main>
     <aside>
       <div class="tarjetasAfiliado row d-flex flex-wrap justify-content-center align-items-center ">
-          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-5">
                 <img src="../assets/img/afiliados/glee pet market 1.jpg" alt="">
             </div>
@@ -78,7 +80,7 @@
               <p>En Glee Pet Veterinaria & Pet Shop seleccionamos los mejores profesionales veterinarios, quienes continúan en capacitación y formación constante, para darle la más cálida y profesional atención a tu mascota.</p>
             </div>
           </div>  
-          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-5">
                   <img class="imgA" src="../assets/img/afiliados/chocos.jpg" alt="">
             </div>
@@ -87,7 +89,7 @@
                 <p>Un verdadero sanatorio para mascotas, con guardias permanentes, con todas las especialidades médicas, con profesionales capacitados. En un sólo complejo todo lo que su mascota necesita.</p>
             </div>
           </div>
-          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-4">
                 <img class="imgA" src="../assets/img/afiliados/veterinaria Alem 1.svg" alt="">
             </div>
@@ -96,7 +98,7 @@
               <p>Atención medica clínica, internaciones, cirugías, farmacia, urgencias. Trabajo en equipo. Experiencia.</p>
               </div>
           </div>  
-          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-4">
               <img class="imgA" src="../assets/img/afiliados/veteri9naria kanus 1.svg" alt="">
             </div>
@@ -105,7 +107,7 @@
               <p>Kanus es una veterinaria 24hrs. Nos encargamos del cuidado de tu mascota</p>
             </div>
           </div>        
-          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-5">
               <img class="imgA" src="../assets/img/afiliados/mundo bicho 1.svg" alt="">
             </div>
@@ -114,7 +116,7 @@
               <p>Atención Veterinarias de animales de compañia no convencionales, animales silvestres y exoticos. Reptiles, Pequeños mamíferos, Aves, Perros y Gatos.</p>
             </div>
           </div>      
-          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-5">
               <img class="imgA" src="../assets/img/afiliados/pixis 1.svg" alt="">
             </div>
